Added contact email to contact.html file.

--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,4 @@
 <h1> Our contact details are </h1>
 <h2> Phone: 123-456-789</h2>
+<h3> email: learninggithub10@gmail.com</h3>
+<p>This is done from linux system.</p>
